2016-03-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Improve revision regex.

2016-03-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py:

	Improved version number handling. The svn revision number was not
	correctly updated (reported by Gerrit).
	The current svn revision is now extracted from 'svn info' for
	development versions and appended to the installed package version.
	However, because the svn version cannot be determined for installed
	packages, typhon.__version__ has the string '+dev' appended for
	development versions.

	This also changes the convention for version number increases. The
	version number is now increased before release, not after.

2016-03-17  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	(Dataset): Make Dataset class semi-singleton.  For a particular class, there
	should be only one object with the same name.  If one attempts to
	create one with an already-existing name, the existing object is
	returned.

	(Dataset.read_period): Add provision to pass on arguments to
	find_granules and to the reader.
	
	
2016-03-10  Oliver Lemke  <olemke@core-dump.info>

	* typhon/datasets/dataset.py: Fix sphinx warnings.

	* doc/config.rst, doc/math.rst: Added.

	* doc/cm.rst, doc/files.rst, doc/oem.rst, doc/plots.rst, doc/utils.rst:

	Remove some unnecessary headings.

2016-03-09  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/math/array.py: Added

	Collection of math-related functions that are uniquely for array, such
	as reduction operators.  Added one function, 'localmin', that returns
	a mask with True at the locations where a 1-D array has a local
	minimum.

	* typhon/math/__init__.py: Added stats, array

	* doc/modules.rst: Added math

2016-03-08  Oliver Lemke  <olemke@core-dump.info>

	* setup.py:

	Remove python 3.4 from supported languages because we now use the new @
	matrix operator from python 3.5.

2016-03-08  Lukas Kluft  <lukas.kluft@gmail.com>
