@@ -1,3 +1,10 @@
+2016-03-18  Gerrit Holl  <g.holl@reading.ac.uk>
+
+	* typhon/math/array.py(limit_ndarray):
+
+	- New function to select elements from structured ndarray based on
+	ranges.  Inspired by a similar function in atmlab.
+
 2016-03-18  Oliver Lemke  <olemke@core-dump.info>
 
 	* typhon/__init__.py: Improve revision regex.
